--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -24,7 +24,7 @@
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-gap: 40px;
-    padding: 90px 0 180px 0;
+    padding: 60px 0 90px 0;
 
     :first-child {
       grid-column: 3/7;
@@ -66,7 +66,15 @@
     .footTopContainer {
       display: flex;
       flex-direction: column;
-      padding: 0 0 30px 0;
+      padding: 0 0 15px 0;
+
+      .lists {
+        margin-top: 15px;
+      }
+
+      div:nth-child(2) {
+        margin-bottom: 20px;
+      }
     }
 
     header {
