--- a/src/templates/casestudy.module.scss
+++ b/src/templates/casestudy.module.scss
@@ -11,6 +11,14 @@
     margin: 120px 0 120px 0;
   }
 
+  div:nth-child(2) {
+    margin-top: 0;
+  }
+
+  .hero {
+    padding-bottom: 0;
+  }
+
   .top {
     margin: 0;
   }
